# hello

./: .gitignore  LICENSE
.github/workflows/: build-android.yml  build-arm32.yml  build-windows.yml
apps/hello/src/hello/: __init__.py  __main__.py  main.py
apps/weather/: pyproject.toml  requirements.txt
apps/weather/src/weather/: __init__.py  __main__.py  app.py  main.py
apps/weather/wheels/pydantic_core/: pydantic_core-2.46.3-cp310-cp310-android_24_armeabi_v7a.whl
apps/xagent/: LICENSE  pyproject.toml  requirements.txt
apps/xagent/src/xagent/: __init__.py  __main__.py  main.py
apps/xagent/src/xagent/desktop/: __init__.py  app.py  config.py  platform.py  utils.py
apps/xagent/src/xagent/desktop/startup/: __init__.py  backend_manager.py  steps.py
apps/xagent/src/xagent/desktop/ui/: __init__.py  error.py  splash.py  webview.py
apps/xagent/src/xagent/plugins/delivery/: __init__.py
apps/xagent/src/xagent/plugins/filter/: __init__.py
apps/xagent/src/xagent/plugins/north/: __init__.py
apps/xagent/src/xagent/plugins/rule/: __init__.py
apps/xagent/src/xagent/plugins/south/: __init__.py
apps/xagent/src/xagent/resources/config/: config.yaml
apps/xagent/src/xagent/resources/static/: app.js  index.html  style.css
apps/xagent/src/xagent/xcore/: __init__.py  gateway.py  run.py
apps/xagent/src/xagent/xcore/api/: __init__.py  app.py  dependencies.py
apps/xagent/src/xagent/xcore/core/: __init__.py  config.py  container.py  event_bus.py  exceptions.py  (+6 more)
apps/xagent/wheels/pydantic_core/: pydantic_core-2.46.3-cp310-cp310-android_24_arm64_v8a.whl  pydantic_core-2.46.3-cp310-cp310-android_24_x86_64.whl  pydantic_core-2.46.3-cp311-cp311-android_24_arm64_v8a.whl  pydantic_core-2.46.3-cp311-cp311-android_24_armeabi_v7a.whl  pydantic_core-2.46.3-cp311-cp311-android_24_x86_64.whl
docs/: Nuitka 扩展模块单文件化与桩文件路由方法论.md  Python Android 应用源码保护与打包方案.md  共享 AppDir 方案技术白皮书.md
scripts/: arm32_build.py  config.py  generate_deploy.py  install.sh  nuitka_compile.py  termux_compile.sh  utils.py
(+115 files in other folders)
