[build-system]
requires = ["briefcase"]
build-backend = "briefcase"

[project]
name = "weather"
version = "1.0.0"
description = "A FastAPI-based weather service"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"

[tool.briefcase]
project_name = "Weather"
bundle = "com.example"
version = "1.0.0"
license = "MIT"

[tool.briefcase.app.weather]
formal_name = "Weather API"
description = "A FastAPI-based weather service"
long_description = """\
A simple FastAPI demo application that provides REST API endpoints.
Run with: weather run
Then visit: http://localhost:8000
API docs: http://localhost:8000/docs
"""
sources = ["src/weather"]
requires = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[tool.briefcase.app.weather.windows]
supports = "win32"
console_app = true
